--- a/package.json
+++ b/package.json
@@ -4,14 +4,36 @@
   "description": "Recrutment task for Clearcode, written in React & Redux",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "npm-run-all --parallel dev:watch* dev:server",
+    "prod": "npm-run-all --parallel prod:build* && npm run prod:server",
+    "test": "jest --coverage --env=jsdom",
+    "test:watch": "npm test -- --watch",
+    "dev:build-server": "webpack --config webpack.server.js",
+    "dev:watch-server": "webpack --config webpack.server.js --watch",
+    "dev:build-client": "webpack --config webpack.client.js",
+    "dev:watch-client": "webpack --config webpack.client.js --watch",
+    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "prod:build-server": "node_modules/.bin/webpack --config webpack.server.js",
+    "prod:build-client": "node_modules/.bin/webpack --config webpack.client.js",
+    "prod:server": "node_modules/.bin/forever -c node build/bundle.js",
+    "rebuild:scss": "npm rebuild node-sass --force",
+    "lint:css": "sass-lint -c ./.sass-lint.yml '**/*.scss' -v -q",
+    "postinstall": "npm run dev"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.0.3"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -24,13 +46,18 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "redux-mock-store": "^1.5.1",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.1.0",
+    "moment": "^2.19.2",
     "moxios": "^0.4.0",
+    "nodemon": "^1.17.1",
+    "npm-run-all": "^4.1.2",
+    "redux-mock-store": "^1.5.1",
     "start-server-webpack-plugin": "^2.2.5",
     "webpack": "^4.11.1",
+    "webpack-cli": "^3.0.3",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2"
   },
