--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:watch* dev:server",
+    "dev": "npm-run-all --parallel dev:watch* dev:server json:server",
     "prod": "npm-run-all --parallel prod:build* && npm run prod:server",
     "test": "jest --coverage --env=jsdom",
     "test:watch": "npm test -- --watch",
+    "json:server": "json-server --watch src/server/db.json --port 3300",
     "dev:build-server": "webpack --config webpack.server.js",
     "dev:watch-server": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js",
@@ -25,6 +26,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "json-server": "^0.13.0",
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.0",
