--- a/package.json
+++ b/package.json
@@ -20,22 +20,29 @@
     "prod:server": "node_modules/.bin/forever -c node build/bundle.js",
     "rebuild:scss": "npm rebuild node-sass --force",
     "lint:css": "sass-lint -c ./.sass-lint.yml '**/*.scss' -v -q",
+    "lint:js": "yarn eslint -c .eslintrc.yml .",
     "postinstall": "npm run dev"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "json-server": "^0.13.0",
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.0.3"
+    "sass-loader": "^7.0.3",
+    "webpack": "^4.11.1",
+    "webpack-cli": "^3.0.3",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -44,23 +51,25 @@
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-only-warn": "^1.0.1",
+    "eslint-plugin-react": "^7.9.1",
     "jest": "^23.1.0",
     "moment": "^2.19.2",
     "moxios": "^0.4.0",
     "nodemon": "^1.17.1",
     "redux-mock-store": "^1.5.1",
-    "start-server-webpack-plugin": "^2.2.5",
-    "webpack": "^4.11.1",
-    "webpack-cli": "^3.0.3",
-    "webpack-merge": "^4.1.2",
-    "webpack-node-externals": "^1.7.2"
+    "start-server-webpack-plugin": "^2.2.5"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./test-setup.js"
