--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "json-server": "^0.13.0",
+    "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.1",
