fixes to pagination

--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "license": "MIT",
   "scripts": {
     "dev": "npm-run-all --parallel dev:watch* dev:server json:server",
-    "prod": "npm-run-all --parallel prod:build* && npm run prod:server",
+    "prod": "npm-run-all --parallel prod:build* prod:server",
     "test": "jest --coverage --env=jsdom",
-    "test:watch": "npm test -- --watch",
+    "test:watch": "yarn test -- --watch",
     "json:server": "json-server --watch src/server/db.json --port 3300",
     "dev:build-server": "webpack --config webpack.server.js",
     "dev:watch-server": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js",
     "dev:watch-client": "webpack --config webpack.client.js --watch",
-    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev:server": "nodemon --watch build --exec \"node server/bundle.js\"",
     "prod:build-server": "node_modules/.bin/webpack --config webpack.server.js",
     "prod:build-client": "node_modules/.bin/webpack --config webpack.client.js",
     "prod:server": "node_modules/.bin/forever -c node build/bundle.js",
-    "rebuild:scss": "npm rebuild node-sass --force",
+    "rebuild:scss": "yarn rebuild node-sass --force",
     "lint:css": "sass-lint -c ./.sass-lint.yml '**/*.scss' -v -q",
     "lint:js": "yarn eslint -c .eslintrc.yml .",
-    "postinstall": "npm run dev"
+    "postinstall": "npm-run-all prod:build* && prod:server"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -55,6 +55,7 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
