--- a/.docker/docker-compose.yml.dist
+++ b/.docker/docker-compose.yml.dist
@@ -5,7 +5,7 @@ services:
     image: node:carbon
     restart: unless-stopped
     volumes:
-        - ../front-end:/home/node/app
+        - ..:/home/node/app
     working_dir: /home/node/app
     ports:
         - ${NODE_APP_PORT}
