--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:watch* dev:server json:server",
-    "prod": "npm-run-all --parallel prod:build* prod:server",
+    "dev": "npm-run-all dev:build* && npm-run-all --parallel dev:watch* dev:server json:server",
+    "prod": "npm-run-all prod:build* && yarn prod:server",
     "test": "jest --coverage --env=jsdom",
     "test:watch": "yarn test -- --watch",
     "json:server": "json-server --watch src/server/db.json --port 3300",
