--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "forever": "^0.15.3",
     "json-server": "^0.13.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
