--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "npm-run-all dev:build* && npm-run-all --parallel dev:watch* dev:server json:server",
-    "prod": "npm-run-all prod:build* && yarn prod:server",
+    "prod": "npm-run-all prod:build* && npm-run-all --parallel json:server prod:server",
     "test": "jest --coverage --env=jsdom",
     "test:watch": "yarn test -- --watch",
     "json:server": "json-server --watch src/server/db.json --port 3300",
@@ -17,18 +17,29 @@
     "dev:server": "nodemon --watch build --exec \"node server/bundle.js\"",
     "prod:build-server": "node_modules/.bin/webpack --config webpack.server.js",
     "prod:build-client": "node_modules/.bin/webpack --config webpack.client.js",
-    "prod:server": "node_modules/.bin/forever -c node build/bundle.js",
+    "prod:server": "node_modules/.bin/forever -c node server/bundle.js",
     "rebuild:scss": "yarn rebuild node-sass --force",
     "lint:css": "sass-lint -c ./.sass-lint.yml '**/*.scss' -v -q",
     "lint:js": "yarn eslint -c .eslintrc.yml .",
-    "postinstall": "npm-run-all prod:build* && prod:server"
+    "postinstall": "yarn prod"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "body-parser": "^1.18.3",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "forever": "^0.15.3",
     "json-server": "^0.13.0",
     "lodash": "^4.17.10",
@@ -43,23 +54,12 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.3",
-    "webpack": "^4.11.1",
-    "webpack-cli": "^3.0.3",
+    "start-server-webpack-plugin": "^2.2.5",
+    "webpack": "^3.10.0",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-react-html-attrs": "^2.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-env": "1.6.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
@@ -72,8 +72,7 @@
     "jest": "^23.1.0",
     "moxios": "^0.4.0",
     "nodemon": "^1.17.1",
-    "redux-mock-store": "^1.5.1",
-    "start-server-webpack-plugin": "^2.2.5"
+    "redux-mock-store": "^1.5.1"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./test-setup.js"
