--- a/.docker/docker-compose.yml.dist
+++ b/.docker/docker-compose.yml.dist
@@ -8,7 +8,8 @@ services:
         - ..:/home/node/app
     working_dir: /home/node/app
     ports:
-        - ${NODE_APP_PORT}
+        - "${NODE_APP_PORT}:3000"
+        - "3300:3300"
     environment:
       NODE_ENV: ${NODE_ENV}
       NODE_APP_PORT: ${NODE_APP_PORT}
